--- a/css/style.css
+++ b/css/style.css
@@ -56,12 +56,13 @@ ul li:hover {
   visibility: hidden;
   opacity: 0;
   position: absolute;
-  transform: translateX(-1em);
   top: 100%;
+  left: 0%;
   background-color: rgb(72, 72, 72, 0.9);
   backdrop-filter: blur(10px);
   box-shadow: 0 6px 6px rgba(0, 0, 0, 0.5);
   padding: 10px;
+  width: 100%;
   min-width: 150px;
   border-radius: 10px;
 }
